1.3.10
	+ Use disableApparmorProfile from EBox::Module::Service twice.
	  First in enableActions. And also in setConf to avoid issues
	  if apparmor is installed after users is enabled.
1.3.9
	+ Bugfix: return empty array in usedFiles if it's not master mode
1.3.8
	+ Bugfix: fixed wrong disable of fields in selecting ad-slave in Mode model
1.3.7
	+ Synchronization with Windows Active Directory (#1443)
1.3.6
	+ Use anonymous bind to fetch dn
1.3.5
	+ Disable slapd apparmor profile in enableActions
	+ Reload nscd when adding users and groups
	+ Bugfix: backup bug report now works again
	+ Bugfix: slave-sync does not try to real journal dir when not
	configured or in slave mode. Journal dir created on
	master's setup.
1.3.0
	+ eBox LDAP architecture now supports a master-slave configuration
	+ bugfix: Update usercorner service when there is a change on the port number
1.1.30
	+ Added widget to manage group belonging from Edit User page
	+ Fixed backup/restore problem with paswords and given/last names
	+ Changed the way users are stored in LDAP, added givenName in addition
	to sn, now cn=givenName+sn instead of cn=uid, this fixes a
	incompatibility bug with eGroupware
	+ In the Edit User interface now Name and Last name are separate
	fields
	+ Usercorner web server certificate can be changed via the CA module
1.1.20
	New release
1.1.10
	+ Make slapd listen only on 127.0.0.1
1.1
	+ Added bind v2 compability needed by squid auth, slapd conf
	regenerated and daemon restarted in postinst to commit possibles
	changes in configuration
	+ Added group model
	+ Use the new ids() and row() API to optimize the management of hundreds of
	users
	+ Allow dashes in user and group names
	+ Initial release of UserCorner which allow users to change their password
	+ Store multiple password hashes and scrap clear text passwords
0.12.100
	+ Restore backup is more robust: inexistent users in a group are
	ignored
	+ Make and restore backup more robust: removed slapd.conf