@@ -30,6 +30,7 @@ use EBox::Types::Host;
 use EBox::Types::Port;
 use EBox::Types::Password;
 use EBox::View::Customizer;
+use EBox::Config;
 
 use strict;
 use warnings;
@@ -164,19 +165,41 @@ sub viewCustomizer
 
     my $customizer = new EBox::View::Customizer();
     $customizer->setModel($self);
+
+    # Be careful: password should be always the first item if you are more
+    # as we remove it using shift later
+    my @enableMaster = ('password');
+    my @disableMaster = ('remote', 'username', 'adpass', 'port', 'secret');
+    my @enableSlave = ('password', 'remote');
+    my @disableSlave = ('port', 'username', 'adpass', 'secret');
+    my @enableAD = ('password', 'remote', 'username', 'adpass', 'port', 'secret');
+    my @disableAD = ();
+
+    # If the password has been autogenerated by the installer we set it
+    # readonly in all three modes to avoid users change it by mistake
+    # when advanced mode is selected
+    if (EBox::Config::configkey('ldap_password_auto') eq 'yes') {
+        shift (@enableMaster);
+        shift (@enableSlave);
+        shift (@enableAD);
+        push (@disableMaster, 'password');
+        push (@disableSlave, 'password');
+        push (@disableAD, 'password');
+    }
     $customizer->setOnChangeActions(
             { mode =>
                 {
                   'master'   => {
-                        enable  => [ 'password' ],
-                        disable => [ 'remote', 'username', 'adpass', 'port', 'secret' ],
+                        enable  => \@enableMaster,
+                        disable => \@disableMaster,
                     },
                   'slave'    => {
-                        enable  => [ 'remote', 'password' ],
-                        disable => [ 'port', 'username', 'adpass', 'secret' ],
+                        enable  => \@enableSlave,
+                        disable => \@disableSlave,
                     },
                   'ad-slave' => {
-                        enable  => [ 'remote', 'password', 'username', 'adpass', 'port', 'secret' ],
+                        enable  => \@enableAD,
+                        disable => \@disableAD,
                     },
                 }
             });
