@@ -328,6 +328,8 @@ sub preconfiguration
     # before enabling modules if usersandgroups is selected
     if ($CNF_users) {
         system("$INSTALL_FILES/ebox-set-master $CNF_ldap_pass >> $LOG 2>&1");
+        # Make the autogenerated password not editable
+        system('echo "\nldap_password_auto = yes" >> /etc/ebox/80users.conf');
     }
 
     # Enable all eBox installed modules
