@@ -1,3 +1,6 @@
+HEAD
+	+ Don't allow modification of ldap password in Mode model if
+      it has been autogenerated by the eBox installer
 1.3.10
 	+ Use disableApparmorProfile from EBox::Module::Service twice.
 	  First in enableActions. And also in setConf to avoid issues
